<?xml version="1.0" encoding="utf-8"?><!--
 * THIS PROJECT IS A UNIVERSITY PROJECT AND MADE BY SCHOOL FOR HIGHER AND PROFESSIONAL EDUCATION WITH COVENTRY UNIVERSITY (UK).
 * PLEASE BE MIND THAT YOU COULD NOT COPY, MODIFY OR SHARE THIS PROJECT IF YOU ARE NOT GET PERMISSION.
 * AUTHOR INFORMATION:
 * NAME: TSANG Long Fung (187107130)
 * CONTACT NUMBER: (+852) 6679 2339
 * CONTACT EMAIL: 187107130@stu.vtc.edu.hk -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/home" />
    <item
        android:id="@+id/action_write"
        android:orderInCategory="2"
        android:title="@string/write" />
    <item
        android:id="@+id/action_user"
        android:orderInCategory="3"
        android:title="@string/user" />
</menu>