<?xml version="1.0" encoding="utf-8"?><!--
 * PLEASE BE MIND THAT YOU COULD NOT COPY, MODIFY OR SHARE THIS PROJECT IF YOU ARE NOT GET PERMISSION.
 * @samjayhk
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/writeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_2">

    <ProgressBar
        android:id="@+id/indeterminateProgressBar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="-6dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/main_blue"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/writeTopBar"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/close"
            android:tint="@color/main_icon_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_post"
            android:textAlignment="center"
            android:textColor="@color/main_font_content"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/post"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/main_blue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/writeTopTags"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/writeTopBar">

        <ImageView
            android:id="@+id/writeImgGlobal"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/global_blue" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/writeSpinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/writeImgGlobal"
            app:ms_arrow_tint="@color/main_blue"
            app:ms_background_color="@android:color/transparent"
            app:ms_background_selector="@color/main_1"
            app:ms_hint="Choose a country"
            app:ms_hint_color="@color/main_blue"
            app:ms_text_color="@color/main_blue" />

        <Button
            android:id="@+id/btnGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/writeSpinner"
            android:background="@android:color/transparent"
            android:text="@string/get"
            android:textColor="@color/main_blue"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:id="@+id/hrLineBelowMain"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/writeTopTags"
        android:background="@color/main_icon_3"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/writeContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/writeBottomBar"
        android:layout_below="@+id/hrLineBelowMain">

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:hint="@string/title_hint"
            android:maxLines="2"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/main_font_title"
            android:textColorHint="@color/main_font_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/hrLineBelowEdt"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/edtTitle"
            android:background="@color/main_icon_3"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/hrLineBelowEdt"
            android:background="@null"
            android:gravity="top|left"
            android:hint="@string/content_hint"
            android:inputType="textMultiLine"
            android:maxLines="9999"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:scrollbars="vertical"
            android:textColor="@color/main_font_content"
            android:textColorHint="@color/main_font_content"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/writeBottomBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/capture_image"
            android:layout_weight="1"
            android:textColor="@color/main_icon_1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/upload_image"
            android:textAlignment="center"
            android:textColor="@color/main_icon_1"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>